--- a/config.json
+++ b/config.json
@@ -12,6 +12,15 @@
             "ApplicationThemes": {
                 "pwsh": "https://gitlab.com/Katy248/sharpblue"
             }
+        },
+        {
+            "Name": "pvtheme",
+            "ApplicationThemes": {
+                "hyprland": "https://gitlab.com/Katy248/hyprland-pvtheme"\
+                , "waybar": "https://gitlab.com/Katy248/waybar-pvtheme"
+                , "wofi": "https://gitlab.com/Katy248/wofi-pvtheme"
+                , "swaylock": "https://gitlab.com/Katy248/swaylock-pvtheme"
+            }
         }
     ]
 }
