--- a/config.json
+++ b/config.json
@@ -14,8 +14,10 @@
                 , "bspwm": "https://gitlab.com/Katy248/bspwm-sharpblue"
                 , "hyprland" : "https://gitlab.com/Katy248/hyprland-sharpblue"
                 , "polybar": "https://gitlab.com/Katy248/polybar-sharpblue"
-                , "pwsh": "https://gitlab.com/Katy248/sharpblue"
+                , "waybar": "https://gitlab.com/Katy248/waybar-sharpblue"
+                , "powershell": "https://gitlab.com/Katy248/sharpblue"
                 , "rofi": "https://gitlab.com/Katy248/rofi-sharpblue"
+                , "wofi": "https://gitlab.com/Katy248/wofi-sharpblue"
             }
         },
         {
